
Changes with ngx_http_redis 0.1.2                               14 Sep 2009

    *) Change: backport to 0.7.61.


Changes with ngx_http_redis 0.1.1                               31 Aug 2009

    *) Change: compatibility with nginx 0.8.11.

    *) Cleanup: mlcf -> rlcf, i.e.
       (memcached location configuration) -> redis...
