@@ -1,1 +1,1 @@
-Sergey A. Osokin <osa@FreeBSD.org.ru>
+Sergey A. Osokin <osa@FreeBSD.ORG.ru>
